--- a/app/src/main/res/layout-v28/activity_login.xml
+++ b/app/src/main/res/layout-v28/activity_login.xml
@@ -112,7 +112,7 @@
                 android:layout_below="@id/checkRememberMe"
                 android:layout_centerHorizontal="true"/>
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -120,18 +120,13 @@
                 android:layout_marginTop="12dp"
                 android:layout_marginBottom="16dp"
                 android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-                android:background="@drawable/btn_blue"
-                android:backgroundTint="#00C853"
-                android:textColor="@color/colorWhite"
-                android:letterSpacing="0.1"
                 android:enabled="true"
                 android:text="@string/action_sign_in"
                 android:layout_below="@id/textView3"
                 android:clickable="true"
                 android:focusable="true"
-                android:elevation="4dp"
                 android:layout_centerHorizontal="true"
-                android:paddingHorizontal="36dp"/>
+                style="@style/ButtonStyle"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
