--- a/app/src/main/res/layout/fragment_user_data_setup1.xml
+++ b/app/src/main/res/layout/fragment_user_data_setup1.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:theme="@style/AppTheme"
+    android:theme="@style/MaterialTheme"
     tools:context=".UserDataSetupFragment1">
 
     <ProgressBar
@@ -29,7 +29,7 @@
         android:layout_marginStart="@dimen/activity_vertical_margin"
         android:layout_below="@id/loadingSetUp1"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="10dp"
+        android:layout_marginVertical="10dp"
         android:id="@+id/textSetupTitle2"
         android:textColor="@color/colorBlack"/>
 
