--- a/app/src/main/res/layout/simple_expandable_list_item_custom.xml
+++ b/app/src/main/res/layout/simple_expandable_list_item_custom.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@android:id/text1"
+    style="?attr/spinnerDropDownItemStyle"
+    android:singleLine="true"
     android:layout_width="match_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight"
-    android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
-    android:textAppearance="?android:attr/textAppearanceListItem"
-    android:gravity="center_vertical"
-    android:textAlignment="viewStart"
-    tools:ignore="RtlCompat,RtlSymmetry"
-    android:background="@color/colorPrimary"
-    android:textColor="@color/colorWhite"/>
+    android:layout_height="?attr/dropdownListPreferredItemHeight"
+    android:ellipsize="marquee"
+    android:layout_gravity="center"
+    android:gravity="center"
+    android:textSize="16sp"/>
