--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#2000"
-    android:theme="@style/MaterialTheme"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:theme="@style/MaterialTheme"
     android:orientation="vertical">
     <ProgressBar
         android:id="@+id/loadingUserProfile"
@@ -32,7 +29,7 @@
                 android:src="@drawable/default_person_image"
                 android:layout_gravity="center"
                 android:layout_margin="@dimen/activity_horizontal_margin"
-                android:id="@+id/imgProfileImage"/>
+                android:id="@+id/imgProfileImage" />
 
             <!--<view
                 android:layout_width="match_parent"
@@ -88,22 +85,17 @@
                     android:textSize="18sp"
                     android:textColor="@color/colorPrimary"/>
             </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/save"
+                android:layout_gravity="center"
+                android:layout_margin="20dp"
+                android:id="@+id/updateChange"
+                android:clickable="true"
+                android:focusable="true"/>
         </LinearLayout>
     </ScrollView>
 
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/colorWhite"
-        android:elevation="4dp"
-        android:text="@string/save"
-        android:letterSpacing="0.3"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/updateChange"
-        android:clickable="true"
-        android:focusable="true"
-        android:backgroundTint="@color/colorPrimary"/>
     
 </RelativeLayout>
