--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -76,4 +76,15 @@
         <item name="android:letterSpacing">0.3</item>
         <item name="elevation">8dp</item>
     </style>
+
+    <style name="StrokeButtonStyle" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="backgroundTint">@color/colorWhite</item>
+        <item name="strokeColor">@color/button_green</item>
+        <item name="strokeWidth">1dp</item>
+        <item name="rippleColor">@color/ripple_green</item>
+        <item name="android:textColor">@color/button_green</item>
+        <item name="android:letterSpacing">0</item>
+        <item name="elevation">8dp</item>
+        <item name="drawableTint">@color/button_green</item>
+    </style>
 </resources>
