--- a/app/src/main/res/layout/activity_courses_taught.xml
+++ b/app/src/main/res/layout/activity_courses_taught.xml
@@ -2,7 +2,8 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:theme="@style/MaterialTheme">
     <!--
     <TextView
         android:layout_width="match_parent"
@@ -81,21 +82,19 @@
 
     </FrameLayout>
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/addCourseButton_coursesTaught"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
-        android:background="@drawable/btn_blue"
-        android:drawableStart="@drawable/add_icon_24"
-        android:drawableTint="@color/colorWhite"
-        android:padding="10dp"
+        android:drawableStart="@drawable/add_icon_48"
         android:text="@string/add_new_course"
-        android:textColor="@color/colorWhite" />
+        style="@style/ButtonStyle"/>
 
 
 
