--- a/app/src/main/res/layout/activity_courses_taught.xml
+++ b/app/src/main/res/layout/activity_courses_taught.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:theme="@style/MaterialTheme">
     <!--
     <TextView
@@ -92,8 +92,8 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
-        android:drawableStart="@drawable/add_icon_48"
         android:text="@string/add_new_course"
+        app:icon="@drawable/add_icon_24"
         style="@style/ButtonStyle"/>
 
 
