Added Payment Details Integration and Paging

--- a/app/src/main/res/menu/home_drawer_menu_1.xml
+++ b/app/src/main/res/menu/home_drawer_menu_1.xml
@@ -14,9 +14,9 @@
         android:title="Upsilon Wallet"
         android:id="@+id/homeDrawerMenuItem6"/>
 
-    <item
-        android:title="TEST_DEBUG"
-        android:id="@+id/homeDrawerMenuItem7"/>
+<!--    <item-->
+<!--        android:title="TEST_DEBUG"-->
+<!--        android:id="@+id/homeDrawerMenuItem7"/>-->
 
     <item
         android:title="Setup Your Profile"
