--- a/app/src/main/res/layout/fragment_explore0.xml
+++ b/app/src/main/res/layout/fragment_explore0.xml
@@ -99,6 +99,6 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         tools:listitem="@layout/explore_course_recycler_card"
-        android:visibility="gone"/>
+        android:visibility="visible"/>
 
 </FrameLayout>
